Thorough changes - Added to logger filter bypassing the info message of execution of command - Developed synchronization between BungeeCord and Bukkit - Some more

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -38,6 +38,7 @@ LOGIN_ATTEMPT.LOGIN.TITLE = &cLog in!
 LOGIN_ATTEMPT.LOGIN.SUBTITLE = Use /login
 IP_BLOCKADE.NOTIFICATION = &4Your IP address on that account might be blocked in a few next attempts
 IP_BLOCKADE.BLOCKADE = &4Your IP address on that account has been blocked! You will not be able to log in anymore.\nYou can unlock your account through the website.
+IP_BLOCKADE.JOIN = &cYour IP address is blockaded on that account!\n&6If it is your account, contact with administration!
 LOGGER.DISABLE = &cPlugin disabled!
 LOGGER.PLUGIN_MESSAGE_CHANNEL.NOT_SPIGOT = &cYou probably run CraftBukkit... Please update atleast to spigot for this to work...
 LOGGER.PLUGIN_MESSAGE_CHANNEL.NOT_BUNGEE = &cThis server is not BungeeCord.
