--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -37,7 +37,8 @@ LOGIN_ATTEMPT.REGISTER.SUBTITLE = Uzyj komendy /register
 LOGIN_ATTEMPT.LOGIN.TITLE = &cZaloguj sie!
 LOGIN_ATTEMPT.LOGIN.SUBTITLE = Uzyj komendy /login
 IP_BLOCKADE.NOTIFICATION = &4Twoj adres IP moze zostac zablokowany na tym koncie przy kolejnych probach!
-IP_BLOCKADE.BLOCKADE = &4Twoj adres IP zostal zablokowany! Nie bedzies mogl sie ponownie zalogowac\nMozesz odblokowac swoje konto wchodzac na strone serwera
+IP_BLOCKADE.BLOCKADE = &4Twoj adres IP zostal zablokowany! Nie bedziesz mogl sie ponownie zalogowac.\nMozesz odblokowac swoje konto wchodzac na strone serwera.
+IP_BLOCKADE.JOIN = &cTwoj adres IP jest zablokowany na tym koncie!\n&6Jesli to konto nalezy do ciebie, skontaktuj sie z administracja!
 LOGGER.DISABLE = &cPlugin wylaczony!
 LOGGER.PLUGIN_MESSAGE_CHANNEL.NOT_SPIGOT = &cPrawdopodobnie uzywasz serwera CraftBukkit, zupdatuj typ serwera na spigot aby uruchomic plugin
 LOGGER.PLUGIN_MESSAGE_CHANNEL.NOT_BUNGEE = &cTen serwer nie nalezy do sieci BungeeCord
