--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,7 +5,7 @@ COMMAND.CHANGEEMAIL.CURRENT.WRONG = &cCurrent e-mail is not correct
 COMMAND.CHANGEEMAIL.CORRECT_USAGE = &c/changeemail <old_e-mail> <new_e-mail> <new_e-mail>
 COMMAND.CHANGEEMAIL.SUCCESS = &aYour email has been changed
 COMMAND.CHANGEEMAIL.NOT_ASSIGNED = &cE-mail is not assigned to your account! Use /setemail command instead.
-/COMMAND.CHANGEEMAIL.SAME = &cCurrent e-mail and new e-mail are the same!
+COMMAND.CHANGEEMAIL.SAME = &cCurrent e-mail and new e-mail are the same!
 COMMAND.EMAIL.NOT_EQUAL = &cE-mails are not equal!
 COMMAND.EMAIL.NEW.WRONG = &cNew e-mail is not correct!
 COMMAND.SETEMAIL.ALREADY_ASSIGNED = &cE-mail is already assigned to your account! Use /changeemail command instead.
@@ -38,6 +38,7 @@ LOGIN_ATTEMPT.LOGIN.TITLE = &cLog in!
 LOGIN_ATTEMPT.LOGIN.SUBTITLE = Use /login
 IP_BLOCKADE.NOTIFICATION = &4Your IP address on that account might be blocked in a few next attempts
 IP_BLOCKADE.BLOCKADE = &4Your IP address on that account has been blocked! You will not be able to log in anymore.\nYou can unlock your account through the website.
+IP_BLOCKADE.JOIN = &cYour IP address is blockaded on that account!\n&6If it is your account, contact with administration!
 LOGGER.DISABLE = &cPlugin disabled!
 LOGGER.PLUGIN_MESSAGE_CHANNEL.NOT_SPIGOT = &cYou probably run CraftBukkit... Please update atleast to spigot for this to work...
 LOGGER.PLUGIN_MESSAGE_CHANNEL.NOT_BUNGEE = &cThis server is not BungeeCord.
